# Kernel_RAG_application

./: Dockerfile  Kernel_rag_modules.py  README.md  docker-compose.yml  entrypoint.sh  local_rag_kernal.py  main.py  pyproject.toml  requirements.txt
ChromaDB/0080ca88-acd3-48be-b6bb-18cdb5a00688/: index_metadata.pickle
Chroma_db/: chroma.sqlite3
ollama/: Dockerfile
